Checkstyle fixes
Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>